package cHasky;

message Argument {
    repeated float activation = 1;
};
